# RAG-monorepo

./: .env.sample  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: authentication.py  rag.py  user.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/model/: user.py
backend/app/repository/: user.py
backend/app/schema/: user.py
backend/app/scripts/: seed.js  seed.py
backend/rag/: embedding.py  query_data.py  vector_store.py
backend/rag/utils/: prompt_system.py  query_formulator.py
backend/tests/: rag_query_tool.py  rag_results.md
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  docker-entrypoint.sh  index.html  nginx-entrypoint.sh  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  auto-import.d.ts  components.d.ts  main.ts  markdown-it-texmath.d.ts
frontend/src/api/: agent.ts  api.ts  index.ts  rag.ts  users.ts
frontend/src/components/: AsideContainer.vue  ChatAside.vue  ChatHeader.vue  ChatItem.vue  ChatLayout.vue  ChatMessage.vue  ErrorChatMessage.vue  LanguageSwitcher.vue  PdfFileUpload.vue  RecentChatWrapper.vue  SelectCollectionModal.vue  SelectModelModal.vue  SelectPresetModal.vue  StreamContent.vue  UserChatMessage.vue  WordExplainPaper.vue
frontend/src/composables/: index.ts  useCollections.ts  useHelloWorld.ts  useOllama.ts  useRAG.ts  useScrollToBottom.ts
frontend/src/locales/: en.ts  fr.ts  index.ts
(+13 files in other folders)
